--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fairy tales -- Yugoslavia'
 - !lcc 'PZ'
+- GITenberg
 title: 'The Laughing Prince: Jugoslav Folk and Fairy Tales'
 url: http://www.gutenberg.org/ebooks/19713
